[gd_scene load_steps=3 format=2]

[ext_resource path="res://Dialogue.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="BottomMenuArea" type="MarginContainer" parent="."]
margin_left = 6.33484
margin_top = 380.0
margin_right = 1021.33
margin_bottom = 595.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Dialogue" parent="BottomMenuArea" instance=ExtResource( 1 )]
visible = false
margin_right = 1015.0
margin_bottom = 215.0

[node name="Start" type="Button" parent="."]
margin_left = 432.488
margin_top = 261.629
margin_right = 518.488
margin_bottom = 305.629
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
visible = false
margin_left = 432.488
margin_top = 261.629
margin_right = 518.488
margin_bottom = 305.629
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
